# py-cli-template

./: config.json  pyproject.toml  readme.md  setup.cfg
mycliapp/: cli.py  main.py
mycliapp/commands/: account.py  base.py
mycliapp/config/: config_parser.py  settings.py
mycliapp/utils/: errors.py  formatter.py  logger.py  parser.py
