[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mycliapp"
version = "0.1.0"
description = "Interactive CLI terminal app template"
requires-python = ">=3.8"
dependencies = [
    "rich>=14.0.0",
]

[project.scripts]
mycliapp = "mycliapp.main:main"
